Atualizando conforme solicitação do PO
